<resources>
    <string name="app_name">chat-app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chatup">ChatUp!</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="loginfragtxt">Welcome back!</string>
    <string name="registerfragtxt">Who are you?</string>
    <string name="emaillogin">Email</string>
    <string name="label_password">Password</string>
    <string name="label_email">E-mail</string>
    <string name="chatlog_list">Top conversations</string>
</resources>