<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LaunchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="40dp"
        android:paddingVertical="80dp"
        android:background="#333333"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"
            >

            <ImageView
                android:id="@+id/iv_icons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/icon_both"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/baloo"
                android:text="@string/chatup"
                android:textAlignment="center"
                android:textSize="55sp"
                android:textColor="#e5e5e5"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_icons" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <com.google.android.material.button.MaterialButton
                android:layout_weight="1"
                android:id="@+id/btn_goto_login"
                android:layout_width="0dp"
                app:cornerRadius="15dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="20sp"
                android:fontFamily="@font/baloo"
                android:textColor="#E5E5E5"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:backgroundTint="#009999"
                />
            <View
                android:layout_width="20dp"
                android:layout_height="0dp"/>
            <com.google.android.material.button.MaterialButton
                android:layout_weight="1"
                app:cornerRadius="15dp"
                android:id="@+id/btn_goto_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:textSize="20sp"
                android:textColor="#E5E5E5"
                android:fontFamily="@font/baloo"
                android:paddingVertical="12dp"
                android:backgroundTint="#DD6B27"
                />
        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>